# mass-composition

./: .buildinfo  .flake8  .gitignore  CHANGELOG.rst  HISTORY.rst  LICENSE  README.md  description.txt  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: modules.doctree
.doctrees/auto_examples/: 001_basic_usage.doctree  002_data_examples.doctree  003_constrain.doctree  004_plot_demo.doctree  104_math_operations.doctree  105_create_network.doctree  106_network_basics.doctree  107_filtering.doctree  108_sankey_plots.doctree  109_split_and_partition.doctree  110_network_layouts.doctree  111_constraints_and_status.doctree  112_compare.doctree  113_partition_models.doctree  114_compare_partitions.doctree  115_simplify_network.doctree  200_interval_data.doctree  201_incremental_separation.doctree  202_interval_data_advanced.doctree  300_interval_data_sink_float.doctree  400_mass_balancing.doctree  502_dag.doctree  503_dag_with_partitions.doctree  504_dag_with_estimator.doctree  _501_simulating_networks.doctree  _simulating_network_functions.doctree  basic_usage.doctree  compare.doctree  compare_partitions.doctree  constrain.doctree  constraints_and_status.doctree  create_network.doctree  data_examples.doctree  filtering.doctree  grade_tonnage.doctree  incremental_separation.doctree  index.doctree  interval_data.doctree  (+13 more)
_modules/: index.html
_sources/: index.rst.txt
_static/: A072391_assay.html  A072391_collars.html  iron_ore_sample_xyz_A072391.html  nordic_iron_ore_sink_float.html  size_by_assay.html  size_distribution.html
api/: modules.html
auto_examples/: 001_basic_usage.html  002_data_examples.html  003_constrain.html  004_plot_demo.html  104_math_operations.html  105_create_network.html  106_network_basics.html  107_filtering.html  108_sankey_plots.html  109_split_and_partition.html  110_network_layouts.html  111_constraints_and_status.html  112_compare.html  113_partition_models.html  114_compare_partitions.html  115_simplify_network.html  200_interval_data.html  201_incremental_separation.html  202_interval_data_advanced.html  300_interval_data_sink_float.html  400_mass_balancing.html  502_dag.html  503_dag_with_partitions.html  504_dag_with_estimator.html  _501_simulating_networks.html  _simulating_network_functions.html  basic_usage.html  compare.html  compare_partitions.html  constrain.html  constraints_and_status.html  create_network.html  data_examples.html  filtering.html  grade_tonnage.html  incremental_separation.html  index.html  interval_data.html  interval_data_advanced.html  interval_data_sink_float.html  (+11 more)
datasets/: datasets.html
dev/: README.md  cumulative_mass_round_trip.py  debugging_tools.py  demo.py  interpolate_3D_grid.py  interval_series.py  iron_ore_sample_data_wrangle.py  numpy_nd_cumsum_diff_round_trip.py  resample_to_new_grid.py  size_distribution.py  weighted statistics.py  xarray_dim_testing.py
development/: cumulative_mass_round_trip.py  demo.py  interval_series.py  intervals.py  iron_ore_sample_data_wrangle.py  resample_to_new_grid.py  weighted statistics.py  xarray_structure_dev.py
docs/: publish.sh
examples/: 002_data_examples.py  003_constrain.py  004_plot_demo.py  105_create_network.py  106_network_basics.py  108_sankey_plots.py  109_split_and_partition.py  112_compare.py  113_partition_models.py  114_compare_partitions.py  115_simplify_network.py  201_incremental_separation.py  202_interval_data_advanced.py  300_interval_data_sink_float.py  3D_data.py  3D_data.py.hide  400_mass_balancing.py  502_dag.py  503_dag_with_partitions.py  504_dag_with_estimator.py  _501_simulating_networks.py  __init__.py  _simulating_network_functions.py  basic_usage.py  basic_usage_xr.py  compare.py  compare_partitions.py  constrain.py  constraints_and_status.py  create_network.py  data_examples.py.hide  drill_hole_data.py  filtering.py  grade_tonnage.py  incremental_separation.py  interval_data.py  interval_data_advanced.py  interval_data_sink_float.py  iron_ore_assays.py  mass_balancing.py  (+13 more)
flowsheet/: __init__.py  flowsheet.py  stream.py
glossary/: glossary.html
license/: license.html
mass_composition/: mass_composition.py  mcxarray.py
mcxarray/: mcxarray.py
sample_data/: A072391_met.csv  iron_ore_sample_data.csv  iron_ore_sample_data_A072391.csv  iron_ore_sample_data_wrangle.py  sample_data.py
scripts/: bump_version.py
test/: __init__.py  fixtures.py  test_201_dag.py  test_201_feed_transformer.py  test_202_split_transformer.py  test_203_combine_transformer.py  test_204_partition_transformer.py  test_210_dag.py  test_aggregate.py  test_compare.py  test_config.py  test_constrain.py  test_constraints.py  test_examples.py  test_math.py  test_math_mass_only.py  test_names.py  test_network.py  test_network_indexes.py  test_pd_utils.py  test_plots.py.hide  test_query.py  test_resample.py  test_source_sink.py  test_variables.py
tests/: fixtures.py  test_000_init.py  test_001_parallel.py  test_001_stream_init.py  test_100_flowsheet.py  test_101_network_indexes.py  test_102_splitting.py  test_103_flowsheet_simplify.py  test_210_dag.py  test_aggregate.py  test_compare.py  test_constrain.py  test_constraints.py  test_math.py  test_math_mass_only.py  test_names.py  test_network.py  test_network_indexes.py  test_pd_utils.py  test_query.py  test_resample.py  test_source_sink.py  test_stream.py  test_variables.py
usage/: installation.html  quickstart.html  troubleshooting.html
user_guide/: user_guide.html
(+579 files in other folders)
