[tool.poetry]
name = "mass-composition"
version = "0.1.6"
description = "For managing multi-dimensional mass-composition datasets, supporting weighted mathematical operations and visualisation."
authors = ["Greg <greg@elphick.com.au>"]
packages = [{ include = "elphick/mass_composition" }]

[[tool.poetry.source]]
name = "pypi_"
url = "https://pypi.org/mass-composition"
secondary = false

#[tool.semantic_release]
#version_variable = "pyproject.toml:version"
#version_source = "tag"

[tool.poetry.dependencies]
python = ">=3.8,<4"
xarray = "^2022.6.0"
periodictable = "^1.6.1"
pyyaml = "^6.0"
scipy = "^1.9.0"
pyvista = { version = "^0.37.0", optional = true }
pyvista-xarray = { version = "^0.1.2", optional = true }
matplotlib = { version = "^3.6.2", optional = true }
plotly = { version = "^5.13.0", optional = true }
kaleido = { version = "0.2.1", optional = true }
seaborn = { version = "^0.12.2", optional = true }
networkx = { version = "^3.0", optional = true }

[tool.poetry.extras]
viz = ["matplotlib", "seaborn", "plotly", "kaleido", "pyvista", "pyvista-xarray"]
network = ["networkx"]

[tool.poetry.group.dev.dependencies]
coverage = "^7.0.5"
notebook = "^6.5.2"
pytest = "^7.1.3"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
sphinx-gallery = "^0.11.1"
sphinx-autodoc-typehints = "^1.18.3"
myst-parser = "^0.18.0"
orca = "^1.8"  # for plotly thumbnails in docs
#python-semantic-release = "^7.33.2"
#ydata-profiling = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
