[tool.poetry]
name = "mass-composition"
version = "0.3.4"
description = "For managing multi-dimensional mass-composition datasets, supporting weighted mathematical operations and visualisation."
authors = ["Greg <greg@elphick.com.au>"]
packages = [{ include = "elphick/mass_composition" }]
repository = "https://github.com/elphick/mass-composition"
documentation = "https://elphick.github.io/mass-composition"
readme = "README.md"

#[[tool.poetry.source]]
#name = "pypi_"
#url = "https://pypi.org/mass-composition"
#priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
xarray = "^2022.6.0"
periodictable = "^1.6.1"
pyyaml = "^6.0"
scipy = "^1.9.0"
matplotlib = "^3.3"  # "^3.6.2"
plotly = "^5.3"  # "^5.13.0"
seaborn = ">0.11"  # "^0.12.2"
pooch = "^1.7.0"
jsonpickle = ">=3.0.1"

kaleido = { version = "0.2.1", optional = true }
pyvista = { version = "^0.37.0", optional = true }
statsmodels = { version = "^0.14.0", optional = true }
pyvista-xarray = { version = "^0.1.2", optional = true }
networkx = { version = ">2.0,<4.0", optional = true }
omfvista = { version = "^0.2.5", optional = true }

[tool.poetry.extras]
viz = ["kaleido", "pyvista", "statsmodels", "pyvista-xarray"]
network = ["networkx"]
omf = ["omfvista"]

[tool.poetry.group.dev.dependencies]
coverage = "^7.0.5"
notebook = "^6.5.2"
pytest = "^7.2.0"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
sphinx-gallery = "^0.11.1"
sphinx-autodoc-typehints = "^1.18.3"
myst-parser = "^0.18.0"
orca = "^1.8"  # for plotly thumbnails in docs
ydata-profiling = "^4.3.2"
sphinxcontrib-datatemplates = "^0.9.2"
sphinxemoji = "^0.2.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
